tests/_resources/error_gcns/E007_unclosed_parenthesis.gcn
# Error: Unclosed parenthesis in function call
block UTILITY
{
    identities
    {
        U[] = log(C[] + I[];
    };
};
